fixed spacing issues and made homepage responsive

--- a/css/style.css
+++ b/css/style.css
@@ -32,15 +32,7 @@ html {
 	color: #fff;
 	padding: 20px;
 }
-/* nav {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	min-height: 1vh;
-	padding-left: 1%;
-	background-color: black;
-	color: white;
-} */
+
 nav {
 	display: flex;
 }
@@ -90,36 +82,6 @@ nav {
 .nav-links li {
 	list-style: none;
 }
-
-/* .nav-links a {
-	text-decoration: none;
-	display: flex;
-	list-style: none;
-	height: 100%;
-	justify-content: space-around;
-	align-items: center;
-	background-color: red;
-} */
-
-/* .nav-links li {
-	display: flex;
-	list-style: none;
-	height: 100%;
-	justify-content: space-around;
-	align-items: center;
-	background-color: red;
-} */
-
-/* .nav-links li a {
-	justify-content: space-around;
-	align-items: center;
-	height: 100%;
-	text-decoration: none;
-	letter-spacing: 1px;
-	font-weight: bold;
-	font-size: 16px;
-	color: white;
-} */
 
 .active {
 	border-bottom: 2px solid white;
@@ -259,35 +221,64 @@ nav {
 	min-height: 100%;
 }
 
-.home-heading {
+#showcase {
+	text-align: center;
+	color: black;
+}
+
+#showcase .showcase-names {
 	position: absolute;
 	top: 35%;
 	width: 100%;
-	text-align: center;
-	color: black;
-	text-transform: uppercase;
 }
 
-.home-heading .name {
-	font-size: 55px;
-	letter-spacing: 6px;
-	font-weight: 500;
+@media (max-width: 568px) {
+	#showcase .showcase-names {
+		position: absolute;
+		top: 17%;
+		width: 100%;
+	}
+
+	.home-links a {
+		color: black;
+		display: block;
+		text-decoration: none;
+		padding: 0;
+		margin-bottom: 10px;
+		font-weight: 600;
+		letter-spacing: 1px;
+	}
+}
+
+#showcase h1 {
+	text-transform: uppercase;
+	text-emphasis: bolder;
+	font-size: 60px;
+	letter-spacing: 7px;
+	line-height: 55px;
 }
 
 .home-links a {
 	color: black;
-	position: relative;
+	/* position: relative; */
 	text-decoration: none;
-	padding: 30px;
-	font-weight: 500;
+	padding-left: 30px;
+	padding-right: 30px;
+	font-weight: 600;
 	letter-spacing: 1px;
 }
 
 .home-links a:hover {
-	color: rgba(1, 1, 1, 0.9);
+	color: rgb(71, 66, 66);
 	font-weight: bolder;
 	font-size: 20px;
 	transition: all 0.3s;
 	-webkit-transition: all 0.4s;
 	-moz-transition: all 0.4s;
+}
+
+footer p {
+	color: white;
+	background-color: black;
+	margin-top: 0px;
 }
